<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".HangmanGameFragment">


    <TextView
        android:id="@+id/textView_word2guess"
        android:layout_width="301dp"
        android:layout_height="38dp"
        android:layout_marginTop="450dp"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_playagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hangman_playagain"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackView" />

    <EditText
        android:id="@+id/plainText_nextChar"
        android:layout_width="181dp"
        android:layout_height="47dp"
        android:autofillHints="@string/hangman_question_txt"
        android:ems="10"
        android:hint="@string/hangman_question_txt"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView_word2guess"
        app:layout_constraintVertical_bias="0.479" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hangman_question_guess"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plainText_nextChar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_word2guess"
        app:layout_constraintVertical_bias="0.482" />

    <ImageView
        android:id="@+id/feedbackView"
        android:contentDescription="@string/imageViewDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/empty"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView_word2guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_hangman_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hangman_hint_button_text"
        app:layout_constraintBottom_toTopOf="@+id/plainText_nextChar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_word2guess" />


</androidx.constraintlayout.widget.ConstraintLayout>