<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HangmanMenuFragment">


    <Button
        android:id="@+id/hangmanStartGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangmanRemoveWordButton" />

    <Button
        android:id="@+id/hangmanAddWordButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hangman_add_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hangmanAddWordTextInput"
        app:layout_constraintTop_toBottomOf="@+id/wordListToggleButton" />

    <Button
        android:id="@+id/hangmanRemoveWordButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hangman_remove_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hangmanRemoveWordTextInput"
        app:layout_constraintTop_toBottomOf="@+id/hangmanAddWordButton" />


    <EditText
        android:id="@+id/hangmanAddWordTextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/hangman_input_word_text_hint"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hangman_input_word_text_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/hangmanAddWordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordListToggleButton" />

    <EditText
        android:id="@+id/hangmanRemoveWordTextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hangman_input_word_text_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/hangmanRemoveWordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangmanAddWordButton"
        android:autofillHints="@string/hangman_input_word_text_hint" />

    <ListView
        android:id="@+id/wordListListView"
        android:layout_width="410dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/wordListToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:textOff="@string/hangman_word_list_toggle_off"
        android:textOn="@string/hangman_word_list_toggle_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordListListView" />

</androidx.constraintlayout.widget.ConstraintLayout>