...
        android:id="@+id/ticTacToeButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        android:src="@drawable/tictactoe"
        app:layout_constraintTop_toBottomOf="@+id/MainMenuTextView"
        app:layout_constraintBottom_toTopOf="@+id/hangmanButton"
        app:layout_constraintEnd_toStartOf="@id/ticTacToeText"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/tic_tac_toe_image" />

    <ImageButton
        android:id="@+id/hangmanButton"
...
